tz-local/resource/test-app/python/tz-py-crawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tz-py-crawler
spec:
  selector:
    matchLabels:
      app: tz-py-crawler
  replicas: 1
  template:
    metadata:
      labels:
        org: tz
        team: mobile
        project: demo
        environment: prod
        app: tz-py-crawler
    spec:
      containers:
      - name: tz-py-crawler
#        image: devops-crawler:latest
        image: ${REPOSITORY_TAG}
#        imagePullPolicy:Never
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
        volumeMounts:
          - name: local-persistent-storage
            mountPath: /mnt
      volumes:
        - name: local-persistent-storage
#          persistentVolumeClaim:
#            claimName: pvc-nfs-dynamic
      nodeSelector:
        team: mobile
        environment: prod

---
apiVersion: v1
kind: Service
metadata:
  name: tz-py-crawler
spec:
  type: NodePort
  selector:
    app: tz-py-crawler
  ports:
    - port: 8000
      targetPort: 8000
#      nodePort: 30007
