tz-local/resource/test-app/python/ingress-jenkins.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: crawler-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: crawler.eks_project.tzcorp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tz-py-crawler
          servicePort: 8000
